k8s/overlays/prod/env.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  template:
    spec:
      containers:
        - name: django
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-backup
spec:
  template:
    spec:
      containers:
        - name: db-backup
